--- a/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
+++ b/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
@@ -397,16 +397,16 @@
     "# Wait for job to complete\n",
     "while True:\n",
     "    resp = requests.get(job_url, headers=headers)\n",
-    "    ctype = resp.headers.get(\"Content-Type\", \"\")\n",
+    "    status_code = resp.status_code\n",
     "\n",
-    "    if \"image/png\" in ctype:\n",
+    "    if status_code == 200:\n",
     "        with open(\"dashboard.png\", \"wb\") as f:\n",
     "            f.write(resp.content)\n",
     "\n",
     "        print(\"PNG downloaded as dashboard.png\")\n",
     "        display(Image(\"dashboard.png\"))\n",
     "        break\n",
-    "    else:\n",
+    "    elif status_code == 503:\n",
     "        print(\"Waiting for job to complete...\")\n",
     "\n",
     "    time.sleep(5)"
