--- a/notebooks/integrations/gemini/google-vertex-ai-completion-notebook.ipynb
+++ b/notebooks/integrations/gemini/google-vertex-ai-completion-notebook.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Google Vertex AI Completion with Elastic\n",
         "\n",
-        "This notebook shows how to use Elastic API to interact with Google Vertex AI models to perform completion tasks.\n",
+        "This notebook shows how to use Elastic Inference API to interact with Google Vertex AI models to perform completion tasks.\n",
         "\n",
         "You will need access to a Google Cloud project and enable the Vertex AI APIs, the GCP console will help you do that, follow the instructions. Please note that costs could derive from the use of Vertex AI.\n",
         "\n",
