--- a/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
+++ b/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
@@ -394,22 +394,24 @@
     "\n",
     "job_url = f\"{os.getenv('KIBANA_URL')}{r.json()['path']}\"\n",
     "\n",
-    "# Wait for job to complete\n",
+    "\n",
     "while True:\n",
     "    resp = requests.get(job_url, headers=headers)\n",
-    "    status_code = resp.status_code\n",
     "\n",
-    "    if status_code == 200:\n",
+    "    print(resp.status_code)\n",
+    "    if resp.status_code == 200:\n",
     "        with open(\"dashboard.png\", \"wb\") as f:\n",
     "            f.write(resp.content)\n",
     "\n",
     "        print(\"PNG downloaded as dashboard.png\")\n",
     "        display(Image(\"dashboard.png\"))\n",
     "        break\n",
-    "    elif status_code == 503:\n",
-    "        print(\"Waiting for job to complete...\")\n",
     "\n",
-    "    time.sleep(5)"
+    "    retry_after = resp.headers.get(\"Retry-After\")\n",
+    "\n",
+    "    if retry_after:\n",
+    "        print(f\"Waiting {retry_after} seconds before retrying...\")\n",
+    "        time.sleep(int(retry_after))"
    ]
   }
  ],
