--- a/notebooks/integrations/gemini/google-vertex-ai-completion-notebook.ipynb
+++ b/notebooks/integrations/gemini/google-vertex-ai-completion-notebook.ipynb
@@ -15,9 +15,7 @@
     "For more info please refer to\n",
     "https://cloud.google.com/vertex-ai\n",
     "\n",
-    "https://www.elastic.co/docs/api/doc/elasticsearch/operation/operation-inference-put-googlevertexai\n",
-    "\n",
-    "\n"
+    "https://www.elastic.co/docs/api/doc/elasticsearch/operation/operation-inference-put-googlevertexai\n"
    ]
   },
   {
@@ -26,7 +24,7 @@
     "id": "eq9qSQkFsa3H"
    },
    "source": [
-    "# Install dependencies"
+    "# Install dependencies\n"
    ]
   },
   {
@@ -37,10 +35,9 @@
    "source": [
     "**Install Python dependencies**\n",
     "\n",
-    "\n",
     "We will use the `elasticsearch` python library to create the inference endpoint and the `requests` library to make HTTP Calls to the Elastic search API.\n",
     "\n",
-    "You may choose a different HTTP library."
+    "You may choose a different HTTP library.\n"
    ]
   },
   {
@@ -68,7 +65,7 @@
     "\n",
     "Now import the necessary modules, including `requests` for making HTTP calls, `json` for manipulating JSON payloads, and `getpass` for secure input of username, password and API keys.\n",
     "\n",
-    "**In production you want to use a secure secret management to handle your sensitive data like usernames, paswords and API keys.**"
+    "**In production you want to use a secure secret management to handle your sensitive data like usernames, paswords and API keys.**\n"
    ]
   },
   {
@@ -94,7 +91,7 @@
     "id": "9GUxCn0qsglg"
    },
    "source": [
-    "# Create Elastic client and Inference endpoint"
+    "# Create Elastic client and Inference endpoint\n"
    ]
   },
   {
@@ -105,7 +102,7 @@
    "source": [
     "**Instantiate the Elasticsearch Client**\n",
     "\n",
-    "This section sets up your Elasticsearch client. For demonstration purposes, we're using a local Elasticsearch instance with default credentials. Adjust these settings for your specific environment."
+    "This section sets up your Elasticsearch client. For demonstration purposes, we're using a local Elasticsearch instance with default credentials. Adjust these settings for your specific environment.\n"
    ]
   },
   {
@@ -122,7 +119,7 @@
    "source": [
     "ELASTIC_USER = getpass(\"ELASTIC USER: \")\n",
     "ELASTIC_PASSWORD = getpass(\"ELASTIC PASSWORD: \")\n",
-    "host = \"35.219.179.83:19200\"\n",
+    "host = \"\"  # use your Elastic API host\n",
     "client = Elasticsearch(\n",
     "    hosts=[f\"http://{host}/\"],\n",
     "    basic_auth=(ELASTIC_USER, ELASTIC_PASSWORD),\n",
@@ -165,19 +162,18 @@
     "\n",
     "For this you will need to get the Service account key file from GCP.\n",
     "\n",
-    "\n",
     "**Get the service account credentials**\n",
     "\n",
-    "You will need a SA (Service Account)  and its credentials so the Elasticsearch server can access the service.\n",
+    "You will need a SA (Service Account) and its credentials so the Elasticsearch server can access the service.\n",
     "\n",
     "Go to https://console.cloud.google.com/iam-admin/serviceaccounts\n",
     "\n",
-    "  1.   Click the button Create service account\n",
-    "  2.   Write a name that it’s suitable for you.\n",
-    "  3.   Click Create and continue\n",
-    "  4.   Grant the role Vertex AI User.\n",
-    "  5.   Click `Add another role` and then grant the role Service account token creator. This role is needed to allow the SA to generate the necessary access tokens\n",
-    "  6.   Click Done.\n",
+    "1.  Click the button Create service account\n",
+    "2.  Write a name that it’s suitable for you.\n",
+    "3.  Click Create and continue\n",
+    "4.  Grant the role Vertex AI User.\n",
+    "5.  Click `Add another role` and then grant the role Service account token creator. This role is needed to allow the SA to generate the necessary access tokens\n",
+    "6.  Click Done.\n",
     "\n",
     "After creating the Service account you need to get the JSON key file:\n",
     "\n",
@@ -185,11 +181,10 @@
     "\n",
     "Go to the keys tab and click Add key -> Create new key -> JSON -> Click on Create\n",
     "\n",
-    "If you get an error message Service account key creation is disabled your administrator needs to change the organization policy *iam.disableServiceAccountKeyCreation* or grant an exception.\n",
+    "If you get an error message Service account key creation is disabled your administrator needs to change the organization policy _iam.disableServiceAccountKeyCreation_ or grant an exception.\n",
     "The service account keys should be downloaded to your PC automatically.\n",
     "\n",
     "Once you donwload the JSON file, open it with you favorite editor and copy its contents. Paste the contents when prompted on the step below.\n",
-    "\n",
     "\n",
     "---\n",
     "\n",
@@ -201,9 +196,7 @@
     "\n",
     "**KEEP SA KEYS SAFE**\n",
     "\n",
-    "**ENFORCE LEAST PRIVILEGE**\n",
-    "\n",
-    "\n"
+    "**ENFORCE LEAST PRIVILEGE**\n"
    ]
   },
   {
@@ -219,11 +212,11 @@
    "outputs": [],
    "source": [
     "GOOGLE_API_KEY = getpass(\"Enter Google Service account API key:  \")\n",
-    "inference_id = \"completion-notebook-test-1\" # set the inference ID for the endpoint\n",
-    "project_id = \"lhoet-elastic-demo\" # use your GCP project\n",
-    "location = \"us-central1\" # set the region in which the model lives\n",
+    "inference_id = \"completion-notebook-test-1\"  # set the inference ID for the endpoint\n",
+    "project_id = \"\"  # use your GCP project\n",
+    "location = \"us-central1\"  # set the region in which the model lives\n",
     "\n",
-    "model_id = \"gemini-2.5-flash-preview-05-20\" # choose the model, you could use any model from your Vertex AI.\n",
+    "model_id = \"gemini-2.5-flash-preview-05-20\"  # choose the model, you could use any model from your Vertex AI.\n",
     "# Availabe models per zone are listed here: https://cloud.google.com/vertex-ai/generative-ai/docs/learn/locations#google_model_endpoint_locations"
    ]
   },
@@ -235,7 +228,7 @@
    "source": [
     "**Generate a Completion Inference**\n",
     "\n",
-    "Using the requests library, create a POST request to the Elastic API for Completion inference task."
+    "Using the requests library, create a POST request to the Elastic API for Completion inference task.\n"
    ]
   },
   {
@@ -259,7 +252,7 @@
     "            \"service_account_json\": GOOGLE_API_KEY,\n",
     "            \"model_id\": model_id,\n",
     "            \"location\": location,\n",
-    "            \"project_id\": project_id\n",
+    "            \"project_id\": project_id,\n",
     "        },\n",
     "    },\n",
     ")"
@@ -271,7 +264,7 @@
     "id": "nrlBxff9spM9"
    },
    "source": [
-    "# Call the Inference API for Completion"
+    "# Call the Inference API for Completion\n"
    ]
   },
   {
@@ -284,16 +277,18 @@
    "source": [
     "api_key = b64encode(f\"{ELASTIC_USER}:{ELASTIC_PASSWORD}\".encode())\n",
     "\n",
+    "\n",
     "def extract_content(json_data) -> str:\n",
     "    try:\n",
-    "      data = json.loads(json_data)\n",
-    "      if \"choices\" in data and len(data[\"choices\"]) > 0:\n",
-    "          choice = data[\"choices\"][0]\n",
-    "          if \"delta\" in choice and \"content\" in choice[\"delta\"]:\n",
-    "              return choice[\"delta\"][\"content\"]\n",
+    "        data = json.loads(json_data)\n",
+    "        if \"choices\" in data and len(data[\"choices\"]) > 0:\n",
+    "            choice = data[\"choices\"][0]\n",
+    "            if \"delta\" in choice and \"content\" in choice[\"delta\"]:\n",
+    "                return choice[\"delta\"][\"content\"]\n",
     "    except:\n",
-    "      pass\n",
+    "        pass\n",
     "    return \"\"\n",
+    "\n",
     "\n",
     "def extract_content_sse(chunk):\n",
     "    \"\"\"\n",
@@ -302,8 +297,8 @@
     "    Handles 'data: [DONE]' messages.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        chunk_str = chunk.decode('utf-8')\n",
-    "        lines = chunk_str.split('\\n')\n",
+    "        chunk_str = chunk.decode(\"utf-8\")\n",
+    "        lines = chunk_str.split(\"\\n\")\n",
     "        extracted_deltas = []\n",
     "\n",
     "        for line in lines:\n",
@@ -311,19 +306,21 @@
     "            if not line:\n",
     "                continue\n",
     "\n",
-    "            if line.startswith('data:'):\n",
-    "                json_data_str = line[len('data:'):].strip()\n",
-    "                if json_data_str == '[DONE]':\n",
+    "            if line.startswith(\"data:\"):\n",
+    "                json_data_str = line[len(\"data:\") :].strip()\n",
+    "                if json_data_str == \"[DONE]\":\n",
     "                    return \"\"\n",
     "                try:\n",
     "                    data_obj = json.loads(json_data_str)\n",
-    "                    if \"completion\" in data_obj and isinstance(data_obj[\"completion\"], list):\n",
+    "                    if \"completion\" in data_obj and isinstance(\n",
+    "                        data_obj[\"completion\"], list\n",
+    "                    ):\n",
     "                        for item in data_obj[\"completion\"]:\n",
     "                            if \"delta\" in item:\n",
     "                                extracted_deltas.append(item[\"delta\"])\n",
     "                except json.JSONDecodeError:\n",
     "                    pass\n",
-    "            elif line.startswith('event: message'):\n",
+    "            elif line.startswith(\"event: message\"):\n",
     "                pass\n",
     "\n",
     "        return \"\".join(extracted_deltas)\n",
@@ -345,13 +342,8 @@
    "outputs": [],
    "source": [
     "url_completion = f\"http://{host}/_inference/completion/{inference_id}\"\n",
-    "headers = {\n",
-    "    'Authorization': f\"Basic {api_key}\",\n",
-    "    'content-type': 'application/json'\n",
-    "}\n",
-    "data_completion = {\n",
-    "    'input': 'What is elastic?'\n",
-    "}\n",
+    "headers = {\"Authorization\": f\"Basic {api_key}\", \"content-type\": \"application/json\"}\n",
+    "data_completion = {\"input\": \"What is elastic?\"}\n",
     "\n",
     "try:\n",
     "    response = requests.post(url_completion, headers=headers, json=data_completion)\n",
@@ -363,8 +355,8 @@
     "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    print(f\"Error during regular completion request: {e}\")\n",
-    "    if hasattr(e, 'response') and e.response is not None:\n",
-    "        print(f\"Response content: {e.response.text}\")\n"
+    "    if hasattr(e, \"response\") and e.response is not None:\n",
+    "        print(f\"Response content: {e.response.text}\")"
    ]
   },
   {
@@ -375,7 +367,7 @@
    "source": [
     "**Call the Inference using Streaming**\n",
     "\n",
-    "The API will stream the LLM response."
+    "The API will stream the LLM response.\n"
    ]
   },
   {
@@ -392,12 +384,10 @@
    "source": [
     "url_stream_completion = f\"http://{host}/_inference/completion/{inference_id}/_stream\"\n",
     "headers_stream = {\n",
-    "    'Authorization': f\"Basic {api_key}\",\n",
-    "    'content-type': 'application/json'\n",
+    "    \"Authorization\": f\"Basic {api_key}\",\n",
+    "    \"content-type\": \"application/json\",\n",
     "}\n",
-    "data_stream_completion = {\n",
-    "    'input': 'What is Elastic? (use spongebob lore to explain)'\n",
-    "}\n",
+    "data_stream_completion = {\"input\": \"What is Elastic? (use spongebob lore to explain)\"}\n",
     "\n",
     "try:\n",
     "\n",
@@ -405,7 +395,7 @@
     "        url_stream_completion,\n",
     "        headers=headers_stream,\n",
     "        json=data_stream_completion,\n",
-    "        stream=True\n",
+    "        stream=True,\n",
     "    )\n",
     "    post_response_stream.raise_for_status()\n",
     "\n",
@@ -419,7 +409,7 @@
     "\n",
     "except requests.exceptions.RequestException as e:\n",
     "    print(f\"Error during streaming completion request: {e}\")\n",
-    "    if hasattr(e, 'response') and e.response is not None:\n",
+    "    if hasattr(e, \"response\") and e.response is not None:\n",
     "        print(f\"Response content: {e.response.text}\")"
    ]
   }
