notebook changes and dataset

--- a/supporting-blog-content/building-elasticsearch-apis-with-fastapi/building_elasticsearch_apis_with_fastapi.ipynb
+++ b/supporting-blog-content/building-elasticsearch-apis-with-fastapi/building_elasticsearch_apis_with_fastapi.ipynb
@@ -28,21 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import asyncio\n",
     "import json\n",
     "import os\n",
-    "import uvicorn\n",
     "import nest_asyncio\n",
+    "import uvicorn\n",
     "\n",
-    "from typing import List\n",
     "from getpass import getpass\n",
-    "from elasticsearch import AsyncElasticsearch\n",
+    "from typing import List\n",
+    "from elasticsearch import Elasticsearch, helpers\n",
     "from fastapi import BackgroundTasks, Body, FastAPI, HTTPException, Response\n",
-    "from fastapi.middleware.cors import CORSMiddleware\n",
     "from pydantic import BaseModel"
    ]
   },
@@ -55,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.environ[\"ELASTICSEARCH_ENDPOINT\"] = getpass(\"Elasticsearch endpoint: \")\n",
-    "os.environ[\"ELASTICSEARCH_API_KEY\"] = getpass(\"Elasticsearch API key: \")\n",
+    "os.environ[\"ELASTICSEARCH_API_KEY\"] = getpass(\"Elasticsearch api-key: \")\n",
     "\n",
     "nest_asyncio.apply()"
    ]
@@ -74,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "ES_INDEX = \"vet-visits\"\n",
     "\n",
-    "es_async_client = AsyncElasticsearch(\n",
+    "es_client = Elasticsearch(\n",
     "    hosts=[os.environ[\"ELASTICSEARCH_ENDPOINT\"]],\n",
     "    api_key=os.environ[\"ELASTICSEARCH_API_KEY\"],\n",
     ")"
@@ -90,24 +89,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FastAPI setup and cors middleware"
+    "## Indexing data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = FastAPI()\n",
+    "try:\n",
+    "    es_client.indices.create(\n",
+    "        index=ES_INDEX,\n",
+    "        body={\n",
+    "            \"mappings\": {\n",
+    "                \"properties\": {\n",
+    "                    \"breed\": {\"type\": \"keyword\"},\n",
+    "                    \"owner_name\": {\n",
+    "                        \"type\": \"text\",\n",
+    "                        \"fields\": {\"keyword\": {\"type\": \"keyword\"}},\n",
+    "                    },\n",
+    "                    \"pet_name\": {\n",
+    "                        \"type\": \"text\",\n",
+    "                        \"fields\": {\"keyword\": {\"type\": \"keyword\"}},\n",
+    "                    },\n",
+    "                    \"species\": {\"type\": \"keyword\"},\n",
+    "                    \"vaccination_history\": {\"type\": \"keyword\"},\n",
+    "                    \"visit_details\": {\"type\": \"text\"},\n",
+    "                }\n",
+    "            }\n",
+    "        },\n",
+    "    )\n",
     "\n",
-    "app.add_middleware(\n",
-    "    CORSMiddleware,\n",
-    "    allow_origins=[\"*\"],\n",
-    "    allow_credentials=True,\n",
-    "    allow_methods=[\"*\"],\n",
-    "    allow_headers=[\"*\"],\n",
-    ")"
+    "    print(f\"Index '{ES_INDEX}' created.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al crear el índice '{ES_INDEX}': {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_data(ndjson_file, index_name):\n",
+    "    with open(ndjson_file, \"r\") as f:\n",
+    "        for line in f:\n",
+    "            doc = json.loads(line)\n",
+    "            yield {\"_index\": index_name, \"_source\": doc}\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    success, errors = helpers.bulk(es_client, build_data(\"vet-visits.ndjson\", ES_INDEX))\n",
+    "    print(f\"{success} documents indexed successfully\")\n",
+    "\n",
+    "    if errors:\n",
+    "        print(\"Errors during indexing:\", errors)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FastAPI setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = FastAPI()"
    ]
   },
   {
@@ -119,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "@app.get(\"/ping\")\n",
     "async def ping():\n",
     "    try:\n",
-    "        health = await es_async_client.cluster.health()\n",
+    "        health = await es_client.cluster.health()\n",
     "\n",
     "        return {\n",
     "            \"status\": \"success\",\n",
@@ -167,8 +222,11 @@
     "            \"active_shards\": health[\"active_shards\"],\n",
     "        }\n",
     "    except Exception as e:\n",
+    "        status_code = getattr(e, \"status_code\", 500)\n",
+    "\n",
     "        raise HTTPException(\n",
-    "            status_code=503, detail=f\"Error connecting to Elasticsearch: {str(e)}\"\n",
+    "            status_code=status_code,\n",
+    "            detail=f\"Error connecting to Elasticsearch: {str(e)}\",\n",
     "        )"
    ]
   },
@@ -181,26 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "@app.post(\"/search\")\n",
-    "async def search(term: str):\n",
-    "    print(term)\n",
-    "\n",
+    "async def search(query: dict = Body(...)):\n",
     "    try:\n",
-    "        query = {\n",
-    "            \"query\": {\"match_phrase\": {\"visit_details\": term}},\n",
-    "            \"size\": 10,\n",
-    "        }\n",
+    "        result = await es_client.search(index=ES_INDEX, body=query)\n",
     "\n",
-    "        result = await es_async_client.search(index=ES_INDEX, body=query)\n",
-    "        hits = result[\"hits\"][\"hits\"]\n",
-    "\n",
-    "        return hits\n",
+    "        return result\n",
     "    except Exception as e:\n",
-    "        raise HTTPException(status_code=500, detail=str(e))"
+    "        status_code = getattr(e, \"status_code\", 500)\n",
+    "\n",
+    "        raise HTTPException(status_code=status_code, detail=str(e))"
    ]
   },
   {
@@ -225,7 +277,7 @@
     "            \"size\": request.size,\n",
     "        }\n",
     "\n",
-    "        result = await es_async_client.search(index=ES_INDEX, body=query)\n",
+    "        result = await es_client.search(index=ES_INDEX, body=query)\n",
     "        hits = result[\"hits\"][\"hits\"]\n",
     "        results = []\n",
     "\n",
@@ -240,7 +292,9 @@
     "\n",
     "        return SearchResponse(hits=results, total=len(results))\n",
     "    except Exception as e:\n",
-    "        raise HTTPException(status_code=500, detail=str(e))"
+    "        status_code = getattr(e, \"status_code\", 500)\n",
+    "\n",
+    "        raise HTTPException(status_code=status_code, detail=str(e))"
    ]
   },
   {
@@ -249,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def check_delete_task(es_client, task_id):\n",
+    "async def check_task(es_client, task_id):\n",
     "    try:\n",
     "        while True:\n",
     "            status = await es_client.tasks.get(task_id=task_id)\n",
@@ -269,15 +323,15 @@
     "    request: SearchRequest = Body(...), background_tasks: BackgroundTasks = None\n",
     "):\n",
     "    try:\n",
-    "        body = {\"query\": {\"match\": {\"description\": request.term}}}\n",
+    "        body = {\"query\": {\"term\": {\"pet_name.keyword\": request.term}}}\n",
     "\n",
-    "        response = await es_async_client.delete_by_query(\n",
+    "        response = await es_client.delete_by_query(\n",
     "            index=ES_INDEX, body=body, wait_for_completion=False\n",
     "        )\n",
     "\n",
     "        task_id = response.get(\"task\")\n",
     "        if task_id:\n",
-    "            background_tasks.add_task(check_delete_task, es_async_client, task_id)\n",
+    "            background_tasks.add_task(check_task, es_client, task_id)\n",
     "\n",
     "        return Response(\n",
     "            status_code=200,\n",
@@ -290,7 +344,9 @@
     "            media_type=\"application/json\",\n",
     "        )\n",
     "    except Exception as e:\n",
-    "        raise HTTPException(status_code=500, detail=str(e))"
+    "        status_code = getattr(e, \"status_code\", 500)\n",
+    "\n",
+    "        raise HTTPException(status_code=status_code, detail=str(e))"
    ]
   },
   {
@@ -301,6 +357,22 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "    uvicorn.run(app, host=\"0.0.0.0\", port=8000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_client.indices.delete(index=ES_INDEX, ignore=[400, 404])"
    ]
   }
  ],
