--- a/supporting-blog-content/building-elasticsearch-apis-with-fastapi/building_elasticsearch_apis_with_fastapi.ipynb
+++ b/supporting-blog-content/building-elasticsearch-apis-with-fastapi/building_elasticsearch_apis_with_fastapi.ipynb
@@ -308,13 +308,13 @@
     "        while True:\n",
     "            status = await es_client.tasks.get(task_id=task_id)\n",
     "            if status.get(\"completed\", False):\n",
-    "                print(f\"Delete task {task_id} completed.\")\n",
+    "                print(f\"Task {task_id} completed.\")\n",
     "                # Here should be the logic to send the email\n",
     "                break\n",
     "\n",
     "            await asyncio.sleep(2)\n",
     "    except Exception as e:\n",
-    "        print(f\"Error checking delete task {task_id}: {e}\")\n",
+    "        print(f\"Error checking task {task_id}: {e}\")\n",
     "\n",
     "\n",
     "# Background task endpoint\n",
