--- a/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
+++ b/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
@@ -118,7 +118,7 @@
       },
       "outputs": [],
       "source": [
-        "%pip install elasticsearch langchain langchain-core langchain-groq langchain-community matplotlib langchain-google-genai -q"
+        "%pip install elasticsearch langchain langchain-core langchain-groq langchain-community matplotlib langchain-google-genai pandas-q"
       ]
     },
     {
