--- a/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
+++ b/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
@@ -159,7 +159,7 @@
         "\n",
         "os.environ[\"GOOGLE_API_KEY\"] = getpass(\"Enter your Google AI API key: \")\n",
         "os.environ[\"ES_API_KEY\"] = getpass(\"Elasticsearch API Key: \")\n",
-        "os.environ[\"ES_URL\"] = getpass(\"Elasticsearch URL: \")\n",
+        "os.environ[\"ES_ENDPOINT\"] = getpass(\"Elasticsearch ENDPOINT: \")\n",
         "\n",
         "\n",
         "index_name = \"technical-articles\""
