--- a/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
+++ b/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
@@ -179,7 +179,7 @@
       "outputs": [],
       "source": [
         "es_client = Elasticsearch(\n",
-        "    os.environ[\"ES_URL\"],\n",
+        "    os.environ[\"ES_ENDPOINT\"],\n",
         "    api_key=os.environ[\"ES_API_KEY\"],\n",
         "    request_timeout=120,\n",
         ")"
