--- a/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
+++ b/supporting-blog-content/why-rag-still-matters/why_rag_still_matters.ipynb
@@ -321,7 +321,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Indexing documents using de Bulk API to Elasticsearch"
+        "Indexing documents using the Bulk API to Elasticsearch"
       ]
     },
     {
