--- a/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
+++ b/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
@@ -462,7 +462,7 @@
         "        # configure reranker\n",
         "        reranker = RankGPTRerank(\n",
         "            llm=OpenAI(\n",
-        "                model=\"gpt-3.5-turbo-16k\",\n",
+        "                model=\"gpt-4.1-mini\",\n",
         "                temperature=0.0,\n",
         "                api_key=os.environ[\"OPENAI_API_KEY\"],\n",
         "            ),\n",
@@ -795,7 +795,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -809,7 +809,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
