--- a/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
+++ b/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# LlamaIndex re-ranker and Elasticsearch re-ranker: Comparison review\n",
         "\n",
-        "This notebook is based on the article [LlamaIndex re-ranker and Elasticsearch re-ranker: Comparison review](https://www.elastic.co/search-labs/blog/llamaIndex-reranker-and-elasticsearch-reranker-comparison-review) and have as main goal to compare the performance of the LlamaIndex re-ranker and the Elasticsearch re-ranker."
+        "This notebook is based on the article [LlamaIndex re-ranker and Elasticsearch re-ranker: Comparison review](https://www.elastic.co/search-labs/blog/llamaIndex-reranker-and-elasticsearch-reranker-comparison-review) and has the main goal to compare the performance of the LlamaIndex re-ranker and the Elasticsearch re-ranker."
       ]
     },
     {
