--- a/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
+++ b/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
@@ -580,7 +580,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Crating inference rerank endpoint"
+        "### Creating inference rerank endpoint"
       ]
     },
     {
