Added link to blog

--- a/supporting-blog-content/result-diversification/diversification.ipynb
+++ b/supporting-blog-content/result-diversification/diversification.ipynb
@@ -11,7 +11,7 @@
     "3. Search items with a broad search term\n",
     "4. Apply result diversification with the MMR algorithm to the results.\n",
     "\n",
-    "Check out our blog post on this topic to learn more about "
+    "Check out our [blog post](https://www.elastic.co/search-labs/blog/diversify-results-maximum-marginal-relevance) on this topic to learn more about "
    ]
   },
   {
