fix missrendering MMR step description

--- a/supporting-blog-content/result-diversification/diversification.ipynb
+++ b/supporting-blog-content/result-diversification/diversification.ipynb
@@ -799,7 +799,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Reranking with Maximum Marginal Relevance (MMR)\\n\\nMMR is a diversity-promoting algorithm that balances:\\n- **Relevance**: How well items match the query\\n- **Diversity**: How different items are from each other\\n\\nThe algorithm iteratively selects items that are relevant to the query but different from already selected items."
+    "## 9. Reranking with Maximum Marginal Relevance (MMR)\n",
+    "MMR is a diversity-promoting algorithm that balances:\n",
+    "\n",
+    "**Relevance**: How well items match the query  \n",
+    "**Diversity**: How different items are from each other  \n",
+    "The algorithm iteratively selects items that are relevant to the query but different from already selected items."
    ]
   },
   {
