notebook title change

--- a/supporting-blog-content/building-elasticsearch-apis-with-fastapi/building_elasticsearch_apis_with_fastapi.ipynb
+++ b/supporting-blog-content/building-elasticsearch-apis-with-fastapi/building_elasticsearch_apis_with_fastapi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using CrewAI with Elasticsearch\n",
+    "# Building Elasticsearch APIs with FastAPI\n",
     "\n",
     "This notebook shows how to build an Elasticsearch API with FastAPI with best practices. This notebook is based on the article [Building Elasticsearch APIs with FastAPI](https://www.elastic.co/search-labs/blog/building-elasticsearch-apis-with-fastapi)\n",
     "\n"
